@@ -198,6 +198,7 @@ source "package/quagga/Config.in"
 source "package/rsync/Config.in"
 source "package/samba/Config.in"
 source "package/socat/Config.in"
+source "package/spawn-fcgi/Config.in"
 source "package/stunnel/Config.in"
 source "package/tcpdump/Config.in"
 source "package/tftpd/Config.in"
